@@ -140,6 +140,38 @@ name|hdfs
 operator|.
 name|DFSConfigKeys
 operator|.
+name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_DEFAULT
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_KEY
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
 name|DFS_CLIENT_BLOCK_WRITE_RETRIES_DEFAULT
 import|;
 end_import
@@ -3486,6 +3518,11 @@ specifier|final
 name|int
 name|nBlockWriteLocateFollowingRetry
 decl_stmt|;
+DECL|field|blockWriteLocateFollowingInitialDelayMs
+specifier|final
+name|int
+name|blockWriteLocateFollowingInitialDelayMs
+decl_stmt|;
 DECL|field|defaultBlockSize
 specifier|final
 name|long
@@ -4012,6 +4049,17 @@ argument_list|(
 name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_RETRIES_KEY
 argument_list|,
 name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_RETRIES_DEFAULT
+argument_list|)
+expr_stmt|;
+name|blockWriteLocateFollowingInitialDelayMs
+operator|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_KEY
+argument_list|,
+name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_DEFAULT
 argument_list|)
 expr_stmt|;
 name|uMask
@@ -4688,6 +4736,18 @@ throw|;
 block|}
 return|return
 name|dataChecksum
+return|;
+block|}
+annotation|@
+name|VisibleForTesting
+DECL|method|getBlockWriteLocateFollowingInitialDelayMs ()
+specifier|public
+name|int
+name|getBlockWriteLocateFollowingInitialDelayMs
+parameter_list|()
+block|{
+return|return
+name|blockWriteLocateFollowingInitialDelayMs
 return|;
 block|}
 block|}
