@@ -7332,7 +7332,12 @@ decl_stmt|;
 name|long
 name|sleeptime
 init|=
-literal|400
+name|dfsClient
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|blockWriteLocateFollowingInitialDelayMs
 decl_stmt|;
 while|while
 condition|(
@@ -10922,9 +10927,14 @@ name|now
 argument_list|()
 decl_stmt|;
 name|long
-name|localTimeout
+name|sleeptime
 init|=
-literal|400
+name|dfsClient
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|blockWriteLocateFollowingInitialDelayMs
 decl_stmt|;
 name|boolean
 name|fileComplete
@@ -11064,10 +11074,10 @@ name|Thread
 operator|.
 name|sleep
 argument_list|(
-name|localTimeout
+name|sleeptime
 argument_list|)
 expr_stmt|;
-name|localTimeout
+name|sleeptime
 operator|*=
 literal|2
 expr_stmt|;
