@@ -6792,6 +6792,121 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testDFSClientConfigurationLocateFollowingBlockInitialDelay ()
+specifier|public
+name|void
+name|testDFSClientConfigurationLocateFollowingBlockInitialDelay
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test if DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_KEY
+comment|// is not configured, verify DFSClient uses the default value 400.
+name|Configuration
+name|dfsConf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|dfsConf
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|NamenodeProtocols
+name|nn
+init|=
+name|cluster
+operator|.
+name|getNameNodeRpc
+argument_list|()
+decl_stmt|;
+name|DFSClient
+name|client
+init|=
+operator|new
+name|DFSClient
+argument_list|(
+literal|null
+argument_list|,
+name|nn
+argument_list|,
+name|dfsConf
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getBlockWriteLocateFollowingInitialDelayMs
+argument_list|()
+argument_list|,
+literal|400
+argument_list|)
+expr_stmt|;
+comment|// change DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_KEY,
+comment|// verify DFSClient uses the configured value 1000.
+name|dfsConf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_BLOCK_WRITE_LOCATEFOLLOWINGBLOCK_INITIAL_DELAY_KEY
+argument_list|,
+literal|1000
+argument_list|)
+expr_stmt|;
+name|client
+operator|=
+operator|new
+name|DFSClient
+argument_list|(
+literal|null
+argument_list|,
+name|nn
+argument_list|,
+name|dfsConf
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getBlockWriteLocateFollowingInitialDelayMs
+argument_list|()
+argument_list|,
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
